# AI_CV_detection_counting_verifictions

./: .black.toml  .flake8  .gitignore  .pre-commit-config.yaml  README.md  Remote Training.md  azure-pipelines.yml  requirements-training.txt  requirements.txt  setup.cfg  startup-hook.sh
demo/: V1_prototype.ipynb  V2_demo.py  V3_demo_WIP.py  demo_utilities.py
demo/archive/: V1_prototype.ipynb
rx_connect/: __init__.py
rx_connect/core/: augments.py  transforms_utils.py
rx_connect/core/callbacks/: __init__.py  early_stopping.py  progress.py
rx_connect/core/images/: geometry.py  grid.py  io.py  masks.py  transforms.py  types.py  visualize.py
rx_connect/core/trainer/: utils.py
rx_connect/core/types/: detection.py  generator.py  segment.py
rx_connect/core/types/verification/: dataset.py  model.py
rx_connect/core/utils/: __init__.py  cv_utils.py  download_utils.py  func_utils.py  image_utils.py  io_utils.py  sam_utils.py  str_utils.py  video.py
rx_connect/dataset/: download_specific_image.py  extract_background.py  parse_metadata.py  readme.md  scrape_nih_images.py  segment_pills.py  utils.py
rx_connect/dataset_generator/: README.md  annotations.py  composition.py  grabcut_utils.py  io_utils.py  mask2polygon.py  object_overlay.py  sam_utils.py  service.py  transform.py
rx_connect/dataset_generator/scripts/: generate_dataset.py  generate_masks.py
rx_connect/detection/: README.md  dataset.py  inference.py  test.py  train.py
rx_connect/generator/: README.md  __init__.py  annotations.py  composition.py  continuous_learning_dataloader.py  io_utils.py  mask2polygon.py  metadata.py  metadata_filter.py  object_overlay.py  sampler.py  transform.py  visualize.py
rx_connect/generator/scripts/: generate_dataset.py  generate_masks.py  mask_to_polygon.py
rx_connect/pill_counting/: README.md  dataset.py  inference.py  train.py
rx_connect/pill_validation/: augments.py  dataset.py
rx_connect/pipelines/: base.py  detection.py  generator.py  image.py  segment.py  vectorizer.py
rx_connect/pipelines/configs/Dev/: counter_config.yml  segment_SAM_config.yml  segment_YOLO_config.yml  segment_config.yml
rx_connect/segmentation/: data.yaml  data_split.py  train.py
rx_connect/segmentation/instance/: data_split.py  inference.py  train.py
rx_connect/segmentation/semantic/: augments.py  datasets.py  losses.py  metrics.py  model.py  model_def.py  train.py
rx_connect/segmentation/semantic/archive/: datasets.py  train.py
rx_connect/segmentation/semantic/configs/: adaptive-deeplabv3plus-resnet.yaml  adaptive.yaml  const-deeplabv3plus-resnest.yaml  const-deeplabv3plus-resnet.yaml  const-linknet-efficientnet.yaml  (+2 more)
rx_connect/tools/: README.md  __init__.py  casting.py  data_tools.py  device.py  env_setup.py  extract_metadata.py  logging.py  pretty_print.py  serialization.py  timers.py
rx_connect/types/: __init__.py  counter_example.py  detection.py  generator.py  image.py  segment.py  segmenter_example.py  vectorizer.py  verification.py
rx_connect/vectorDB/: vector_database.py
rx_connect/verification/: augments.py  dataset.py  similarity_eval.py  split.py
rx_connect/verification/classification/: base.py  lightning_model.py  losses.py  margins.py  model.py  pooling.py  train.py
rx_connect/verification/embedding/: base.py  lightning_model.py  train.py
rx_connect/verification/evaluation/: eval_loading_utils.py  evaluation.py  metrics.py  ver_eval.py
rx_connect/wbaml/utils/: exception.py  logging.py
(+9 files in other folders)
