[metadata]
name = Rx-Connect
version = 0.0.0
description = An AI-based system for virtual prescription verification and pharmacy operations.
long_description = file: README.rst,
keywords =
    ML
    CV
python_requires = >=3.10
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    black == 23.3.0
    flake8 == 6.0.0
    isort == 5.12.0
    mypy == 1.3.0
    pre-commit == 3.3.1
    types-PyYAML
    types-requests
    types-setuptools
    types-tabulate
    types-toml
    types-typed-ast
    ipywidgets
    ipdb

[options.entry_points]
console_scripts =
    # Dataset Generator
    mask_generator = rx_connect.generator.scripts.generate_masks:main
    dataset_generator = rx_connect.generator.scripts.generate_dataset:main
    # Detection
    detection_train = rx_connect.detection.train:main
    detection_test = rx_connect.detection.test:main
    detection_inference = rx_connect.detection.inference:main
