[metadata]
name = Rx-Connect
version = 0.0.0
description = An AI-based system for virtual prescription verification and pharmacy operations.
long_description = file: README.rst,
keywords =
    ML
    CV
python_requires = >=3.10
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    # Linting libraries
    black == 23.3.0
    flake8 == 6.0.0
    isort == 5.12.0
    mypy == 1.4.1
    pre-commit == 3.3.3
    # Type stubs for standard library
    types-beautifulsoup4
    types-Pillow
    types-PyYAML
    types-requests
    types-setuptools
    types-tabulate
    types-toml
    types-tqdm
    types-typed-ast
    # Development dependencies
    ipywidgets
    ipdb

[options.entry_points]
console_scripts =
    # Dataset Generator
    mask_generator = rx_connect.generator.scripts.generate_masks:main
    mask_to_polygon = rx_connect.generator.scripts.mask_to_polygon:main
    dataset_generator = rx_connect.generator.scripts.generate_dataset:main
    # Detection
    detection_train = rx_connect.detection.train:main
    detection_test = rx_connect.detection.test:main
    detection_inference = rx_connect.detection.inference:main
    # Verification
    verification_train = rx_connect.verification.classification.train:main
